create index code
HTML of my resume

--- a/index.html
+++ b/index.html
@@ -1,12 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My resume</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+
+    <!-- main container -->
+    <div class="main-container">
+        <!-- main content section -->
+        <div class="main-content-section">
+            <!-- about me section -->
+            <div class="about-me-section">
+
+                <h2 class="about-me-profession">Guitar Teacher and Music Producer</h2>
+                <h1 class="about-me-name">Roman Gostylo</h1>
+
+                <p class="about-me-text">
+                    Профессиональный гитарист, преподаватель. <br>
+                    Саунд-продюсер, композитор и аранжировщик. <br>
+                    Руководитель Современной Музыкальной Школы "Unison". <br>
+                    Начинающий Front-End разработчик.
+                </p>
+
+            </div>
+
+            <!-- my projects section -->
+            <div class="my-projects-section">
+                <h3 class="projects-title">Projects</h3>
+
+                <ol class="my-projects-list">
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a href="https://unison-school.com.ua">"Unison" Guitar School</a>
+                            ..........................
+                            <span class="bracket">[</span> Guitar, Bass, Ukulele <span class="bracket">]</span>
+                        </span>
+                    </li>
+
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a href="https://www.instagram.com/unison.music.school/"> Modern Music School "Unison"</a>
+                            .......
+                            <span class="bracket">[</span> Head Leader <span class="bracket">]</span>
+                        </span>
+                    </li>
+
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a href="https://www.youtube.com/c/RomanGostylo/">https://www.youtube.com</a>
+                            ..................
+                            <span class="bracket">[</span> Music Production <span class="bracket">]</span>
+                        </span>
+                    </li>
+                </ol>
+            </div>
+
+            <!-- my work exp. section -->
+            <div>
+                <h3 class="work-title">Work Experience</h3>
+
+                <!-- company 3 -->
+                <div>
+                    <h4 class="my-work-exp-position">Guitar teacher <span class="my-work-company"> Kyiv Music School
+                            №22</span></h4>
+                    <p class="my-work-exp-time">October 2000 - May 2011 <span class="pipe">|</span> Kyiv</p>
+                    <ul class="my-work-exp-text">
+                        <li>Преподаватель классической гитары для детей школьного возраста</li>
+                        <li>Руководитель гитарного ансамбля</li>
+                        <li>Преподаватель сольфеджио</li>
+                        <li>Компьютерный администратор</li>
+                    </ul>
+                </div>
+
+                <!-- company 2 -->
+                <div>
+                    <h4 class="my-work-exp-position"> Director & Lead Teacher <span class="my-work-company"> Modern
+                            Music School "Unison" </span></h4>
+                    <p class="my-work-exp-time">August 2011 - up to now <span class="pipe">|</span> Kyiv</p>
+                    <ul class="my-work-exp-text">
+                        <li>Руководитель и ведущий преподаватель</li>
+                        <li>Разработка авторской инновационной методики обучения игры на электрогитаре</li>
+                        <li>Разработка методики обучения импровизации</li>
+                    </ul>
+                </div>
+
+                <!-- company 1 -->
+                <div>
+                    <h4 class="my-work-exp-position">Arranger & Sound engineer <span class="my-work-company">"Unison"
+                            Recording Studio</span></h4>
+                    <p class="my-work-exp-time">2012 - up to now <span class="pipe">|</span> Kyiv</p>
+                    <ul class="my-work-exp-text">
+                        <li>Аранжировка музыкального материала</li>
+                        <li>Редактирование и сведение</li>
+                        <li>Запись вокала и музыкальных инструментов</li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <!-- my education section -->
+            <div>
+                <h3 class="education-title">Education</h3>
+                <h4 class="education-company">National Pedagogical Drahomanov University</h4>
+                <p class="study">Faculty of Arts</p>
+                <p class="education-time">September 2000 - June 2004 <span class="pipe">|</span> Kyiv</p>
+            </div>
+
+        </div>
+
+        <!-- sidebar section -->
+        <aside class="sidebar-section">
+
+            <img class="photo" src="img/foto.jpg" alt="my photo">
+
+            <!-- contact section -->
+            <div class="contacts">
+                <h3 class="sidebar-title">Contacts</h3>
+                <div>
+                    <span class="contact-section-type">C:</span>
+                    <a class="contact-section-link" href="tel:+380501622006">+38(050)-16-22-006</a>
+                </div>
+                <div>
+                    <span class="contact-section-type">E:</span>
+                    <a class="contact-section-link" href="mailto:ronnik81@gmail.com">ronnik81@gmail.com</a>
+                </div>
+            </div>
+
+            <!-- tech skills section -->
+            <div class="tech-skills">
+                <h3 class="sidebar-title">Tech Skills</h3>
+                <ul class="tech-skills-list">
+                    <li class="skills-item"><span class="skills-item-text">Classical Guitar</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Electric Guitar</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Bass Guitar</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Ukulele</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Vocal</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Arrangement</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Audio Mixing</span></li>
+                </ul>
+
+            </div>
+
+            <!-- soft skills section -->
+            <div class="soft-skills">
+                <h3 class="sidebar-title">Soft Skills</h3>
+                <ul class="soft-skills-list">
+                    <li class="skills-item"><span class="skills-item-text">Creative</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Inventive</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Responsible</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Experienced</span></li>
+                    <li class="skills-item"><span class="skills-item-text">Teamwork</span></li>
+                </ul>
+
+            </div>
+
+        </aside>
+    </div>
+
 </body>
+
 </html>
